--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body{
     font: 15px/1.5 Arial;
     padding: 0;
     margin: 0;
-    background-Color:#f4f4f4;
+    background-Color:#2c2f33;
 }
 
 /* Global */
@@ -28,8 +28,8 @@ header{
     font: 20px/1.5 Gotham;
     padding-top:30px;
     Color:#ffffff;
-    background:#2b2d2f;
-    border-bottom:#ff00A2 3px solid;
+    background:#23272a;
+    border-bottom:#ff00A2 5px solid;
 }
 
 header a{
@@ -74,5 +74,44 @@ header nav{
     float:right;
     margin-right: 100px;
     margin-top:18px;
+}
+
+header .highlight, header .current a{
+    color:#ff00A2;
+}
+/* hover effects*/
+.cool-link::after{
+    content: '';
+    display:block;
+    width:100%;
+    height:4px;
+    background:#ff00A2;
+    transform: scaleX(0);
+    transition: transform 250ms ease-in;
+}
+
+.cool-link:hover::after{
+    transform: scaleX(1)
+}
+
+.coolcurrent-link::after{
+    content: '';
+    display:block;
+    width:100%;
+    height:4px;
+    background:#fff;
+    transform: scaleX(0);
+    transition: transform 250ms ease-in;
+}
+
+.coolcurrent-link:hover::after{
+    transform: scaleX(1)
+}
+
+/* Showcase */
+#Hello{
+    background:url('../img/yayyy.svg')no-repeat;
+    min-height:482px;
+    border-bottom:#ff00A2 5px solid;
 }
 
